feat:Update README.desktop.md